[package]
name = "okta-auth"
version = "0.1.0"
edition = "2024"
authors = ["Scott Idler <scott.idler@tatari.tv>"]
description = "Rust library for Okta OAuth2 PKCE authentication in CLI tools - browser login, token caching, and transparent refresh"
license = "MIT"
repository = "https://github.com/tatari-tv/okta-auth-rs"

[dependencies]
dirs = "6.0.0"
log = "0.4.29"
oauth2 = { version = "5.0.0", features = ["reqwest-blocking"] }
open = "5.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tiny_http = "0.12.0"
urlencoding = "2.1.3"

[dev-dependencies]
serial_test = "3.4.0"
tempfile = "3.27.0"
